<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_size"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/sizeGroup"
        android:layout_width="127dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeText"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/size30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sizeClicked"
            android:text="@string/_30_cm_6" />

        <RadioButton
            android:id="@+id/size40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sizeClicked"
            android:text="@string/_40_cm_10" />

        <RadioButton
            android:id="@+id/size50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sizeClicked"
            android:text="@string/_50_cm_15" />
    </RadioGroup>

    <TextView
        android:id="@+id/sizeText"
        android:layout_width="186dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/size_of_the_pizza"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>