<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1DEE9"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pizzaText"
        android:layout_width="261dp"
        android:layout_height="155dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layerType="none"
        android:paddingLeft="15dp"
        android:paddingTop="50dp"
        android:paddingRight="15dp"
        android:text="@string/pizza_order"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="155dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/pizza_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_logo" />

    <TextView
        android:id="@+id/total"
        android:layout_width="176dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/fragment_holder"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="176dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#30B35C"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/total"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.lab2_pizza.Fragments.IngredientsFragment"
        android:layout_width="371dp"
        android:layout_height="302dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_ingredients" />

    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.lab2_pizza.Fragments.SizeFragment"
        android:layout_width="365dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaText"
        tools:layout="@layout/fragment_size" />

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="363dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment"
        app:layout_constraintVertical_bias="0.78">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>